--- a/Educacion/educacion.html
+++ b/Educacion/educacion.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>Educaron</title>
+    <title>Educación</title>
   </head>
   <body>
     <header>
