--- a/Experiencia/experiencia.html
+++ b/Experiencia/experiencia.html
@@ -17,8 +17,8 @@
           <h3>18/04/1996   Buenavista, Boyacá</h3><br>
           <h3>Enlaces de Menu</h3>
             <ul>
-              <h2><li><a href="../index.html">Inicio</a></li></h2>
-              <h2><li><a href="../Educacion/educacion.html">Educación</a></li></h2>
+              <h2><li><a href="../index.html"><em>Inicio</em></a></li></h2>
+              <h2><li><a href="../Educacion/educacion.html"><em>Educación</em></a></li></h2>
             </ul><br>
       <h2>Experiencia</h2>
         <h3>Habilidades e intereses profesionales</h3>
@@ -44,9 +44,9 @@
             <source src="audio/hobbies.wav" type="audio/wav">
           </audio>
       <footer>
-        <p>Email: danny.puentes18@gmail.com</p>
-        <p>Dirección: Calle 52 sur # 79 – 11 Torre J1 Int 3 Apto 403 Kennedy - Bogotá</p>
-        <p>Teléfono: 311 212 0147</p>
+        <p><em><strong>Email: danny.puentes18@gmail.com</strong></em></p>
+        <p><em><strong>Dirección: Calle 52 sur # 79 – 11 Torre J1 Int 3 Apto 403 Kennedy - Bogotá</strong></em></p>
+        <p><em><strong>Teléfono: 311 212 0147</strong></em></p>
       </footer>
   </body>
 </html>
