--- a/Experiencia/experiencia.html
+++ b/Experiencia/experiencia.html
@@ -22,7 +22,7 @@
             </ul><br>
       <h2>Experiencia</h2>
         <h3>Habilidades e intereses profesionales</h3>
-          <video  poster="img/ti.jpg" controls width="500px" height="400px" preload="auto">
+          <video  poster="img/sap.jpg" controls width="500px" height="400px" preload="auto">
             <source src="video/prueba.m4a" type="video/m4a">
             <source src="video/video.avi" type="video/avi">
             <source src="video/video.flv" type="video/flv">
